refactor: rename variables in order generator